Related: tdf#153374 Don't release autoreleased attributeNames

Also, return an autoreleased empty array instead of a retained array.

Change-Id: I5f494b301dbae859486d6bc4874112b714022b60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150307
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>
(cherry picked from commit 127eacf630e1712fd5addcabed404b2d33752311)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150786
Tested-by: Andras Timar <andras.timar@collabora.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>